--- a/app/views/pay_per_views/_contender_fields.html.erb
+++ b/app/views/pay_per_views/_contender_fields.html.erb
@@ -1,7 +1,11 @@
 <div class="nested-fields">
   <div class="field">
     <%= f.label :name, "Contender Name" %>
-    <%= f.select :name, PayPerView.possible_contenders, include_blank: true %>
+    <% if f.object.type == "TagTeam" %>
+      <%= f.select :name, PayPerView.possible_tag_contenders, include_blank: true %>
+    <% else %>
+      <%= f.select :name, PayPerView.possible_contenders, include_blank: true %>
+    <% end %>
 
 
     <%= link_to_remove_association "remove contender", f %>
