--- a/app/views/pay_per_views/_tag_team_contender_fields.html.erb
+++ b/app/views/pay_per_views/_tag_team_contender_fields.html.erb
@@ -2,6 +2,8 @@
   <div class="field">
     <%= f.label :name, "Tag team Name" %>
     <%= f.select :name, PayPerView.possible_tag_contenders, include_blank: true %>
+    
+    <%= f.hidden_field :type, value: TagTeam %>
 
 
     <%= link_to_remove_association "remove tag team", f %>
